--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,14 +1,17 @@
-@import "mocha.css";
+@import "./mocha.css";
 
 * {
-    font-family: Symbols Nerd Font, Fira Code;
-    color: @text;
-    font-size: 14px;
-    font-weight: 700;
+    font-family: Cantarell, "Symbols Nerd Font";
+    font-size: 13px;
 }
 
 window#waybar {
     background-color: @crust;
+    border-bottom: 1px solid @surface0;
+    color: @text;
+    font-weight: bold;
+    transition-property: background-color;
+    transition-duration: .5s;
 }
 
 window#waybar.hidden {
@@ -23,24 +26,21 @@ button {
     border-radius: 0;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-    background: inherit;
-    box-shadow: inherit;
-}
-
 #workspaces button {
     padding: 0 5px;
+    background-color: transparent;
+    color: @text;
+    transition-property: none;
 }
 
 #workspaces button:hover {
-    transition-property: none;
-    background-color: transparent;
+    background: @base;
+    box-shadow: inset 0 -1px @surface0;
 }
 
 #workspaces button.active {
     background-color: @surface0;
-    box-shadow: inset 0 -3px @text;
+    box-shadow: inset 0 -3px @maroon;
 }
 
 #workspaces button.urgent {
@@ -48,28 +48,27 @@ button:hover {
     color: @base;
 }
 
-#window {
-    margin-left: 10px;
-    transition-property: position;
-}
-
 #clock,
 #battery,
 #backlight,
 #network,
 #pulseaudio,
-#wireplumber,
 #tray {
-    margin: 0 10px;
+    padding: 0 10px;
+}
+
+#window,
+#workspaces {
+    margin: 0 4px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
+.modules-left>widget:first-child>#workspaces {
     margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
+.modules-right>widget:last-child>#workspaces {
     margin-right: 0;
 }
 
@@ -81,79 +80,47 @@ button:hover {
     color: @sky;
 }
 
+#network.disconnected {
+    color: @overlay0;
+}
+
 #battery {
     color: @green;
 }
 
-#battery.charging, #battery.plugged {
+#battery.charging,
+#battery.plugged {
     color: @yellow;
 }
 
-/* @keyframes blink { */
-/*     to { */
-/*         background-color: #ffffff; */
-/*         color: #000000; */
-/*     } */
-/* } */
-
 #battery.critical:not(.charging) {
     color: @red;
-    /* animation-name: blink; */
-    /* animation-duration: 0.5s; */
-    /* animation-timing-function: linear; */
-    /* animation-iteration-count: infinite; */
-    /* animation-direction: alternate; */
-}
-
-label:focus {
-    background-color: #000000;
 }
 
 #backlight {
     color: @peach;
 }
 
-#network.disconnected {
-    color: @overlay0;
-}
-
 #pulseaudio {
-    color: @mauve;
+    color: @pink;
 }
 
 #pulseaudio.muted {
     color: @overlay0;
 }
 
-/* #wireplumber { */
-/*     background-color: #fff0f5; */
-/*     color: #000000; */
-/* } */
-
-/* #wireplumber.muted { */
-/*     background-color: #f53c3c; */
-/* } */
-
 #tray {
-    background-color: @surface0;
-    padding: 0 12px;
-    border-radius: 15px;
-    margin: 3px 0;
+    background-color: @surface1;
+    margin: 4px 0;
+    border-radius: 999px;
+    font-weight: normal;
 }
 
-#tray > .passive {
+#tray>.passive {
     -gtk-icon-effect: dim;
 }
 
-#tray > .needs-attention {
+#tray>.needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: @peach;
+    background-color: @red;
 }
-
-/* #scratchpad { */
-/*     background: rgba(0, 0, 0, 0.2); */
-/* } */
-
-/* #scratchpad.empty { */
-/* 	background-color: transparent; */
-/* } */
