--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "./mocha.css";
 
 * {
-    font-family: Cantarell, "Symbols Nerd Font";
+    font-family: Inter, "Symbols Nerd Font";
     font-size: 14px;
 }
 
@@ -9,7 +9,7 @@ window#waybar {
     background-color: @crust;
     border-bottom: 1px solid @surface0;
     color: @text;
-    font-weight: bold;
+    font-weight: 600;
     transition-property: background-color;
     transition-duration: .5s;
 }
@@ -28,6 +28,7 @@ button {
 
 #workspaces button {
     padding: 0 5px;
+    font-weight: 600;
     background-color: transparent;
     color: @text;
     transition-property: none;
@@ -40,6 +41,7 @@ button {
 
 #workspaces button.active {
     background-color: @surface0;
+    font-weight: 700;
     box-shadow: inset 0 -3px @maroon;
 }
 
