--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -28,10 +28,10 @@ button {
 }
 
 #workspaces {
-    background-color: @base;
+    background-color: @surface0;
     margin: 6px 2px 6px 6px;
     border-radius: 4px;
-    border: 1px solid @surface0;
+    border: 1px solid @surface1;
 }
 
 #workspaces button {
@@ -44,7 +44,7 @@ button {
 }
 
 #workspaces button:hover {
-    background: @surface0;
+    background: @surface1;
 }
 
 #workspaces button.special.active {
@@ -53,7 +53,7 @@ button {
 
 #workspaces button.active {
     background-color: @sapphire;
-    color: @base;
+    color: @surface0;
 }
 
 #workspaces button.urgent {
@@ -65,11 +65,11 @@ button {
 #backlight,
 #pulseaudio,
 #tray {
-    background-color: @base;
+    background-color: @surface0;
     padding: 0 10px;
     margin: 6px 0;
     border-radius: 4px;
-    border: 1px solid @surface0;
+    border: 1px solid @surface1;
 }
 #clock {
     margin: 0 10px 0 4px;
