--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -64,6 +64,7 @@ button {
 #battery,
 #backlight,
 #pulseaudio,
+#clock,
 #tray {
     background-color: @surface0;
     padding: 0 10px;
@@ -72,7 +73,8 @@ button {
     border: 1px solid @surface1;
 }
 #clock {
-    margin: 0 10px 0 4px;
+    color: @blue;
+    margin-right: 6px;
 }
 
 #battery {
