--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,8 +1,8 @@
 @import "./mocha.css";
 
 * {
-    font-family: Inter, "Symbols Nerd Font";
-    font-size: 14px;
+    font-family: "Iosevka", "Symbols Nerd Font";
+    font-size: 15px;
 }
 
 window#waybar {
@@ -61,10 +61,17 @@ button {
     color: @surface0;
 }
 
+window#waybar.fullscreen #window{
+    color: @sapphire;
+}
+
+#custom-app-launcher,
+#custom-command-palette,
 #battery,
 #backlight,
 #pulseaudio,
 #clock,
+#network,
 #tray {
     background-color: @surface0;
     padding: 0 10px;
@@ -72,9 +79,34 @@ button {
     border-radius: 4px;
     border: 1px solid @surface1;
 }
-#clock {
-    color: @blue;
+
+#custom-command-palette {
+    color: @mauve;
     margin-right: 6px;
+}
+
+#custom-reboot {
+    color: @peach;
+}
+
+#custom-sleep {
+    color: @sky;
+}
+
+#custom-quit {
+    color: @lavender;
+}
+
+#clock {
+    color: @lavender;
+}
+
+#network {
+    color: @teal;
+}
+
+#network.disconnected {
+    color: @overlay2;
 }
 
 #battery {
@@ -102,8 +134,9 @@ button {
     color: @overlay2;
 }
 
-#tray {
+#tray menu * {
     font-weight: normal;
+    font-family: Inter;
 }
 
 #tray>.passive {
