--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -7,7 +7,7 @@
 }
 
 window#waybar {
-    font-family: Iosevka Extended, Symbols Nerd Font;
+    font-family: JetBrains Mono, Symbols Nerd Font;
     background: @bg0;
     border-bottom: 1px solid @border0;
     color: @fg0;
