--- a/config/waybar/tokyonight.css
+++ b/config/waybar/tokyonight.css
@@ -1,20 +1,20 @@
 @define-color bg0     #16161e;
-@define-color bg1     #222436;
-@define-color bg2     #2f334d;
+@define-color bg1     #1a1b26;
+@define-color bg2     #292e42;
 
-@define-color fg0     #c8d3f5;
-@define-color fg1     #828bb8;
+@define-color fg0     #c0caf5;
+@define-color fg1     #a9b1d6;
 
 @define-color border0 @bg2;
 @define-color border1 @fg1;
 
-@define-color accent    #394b70;
-@define-color red       #ff757f;
-@define-color orange    #ff966c;
-@define-color yellow    #ffc777;
-@define-color green     #c3e88d;
+@define-color accent    #283457;
+@define-color red       #f7768e;
+@define-color orange    #ff9e64;
+@define-color yellow    #e0af68;
+@define-color green     #9ece6a;
 
-@define-color fg-block0 #86e1fc;
-@define-color fg-block1 #4fd6be;
-@define-color fg-block2 #D27E99;
-@define-color fg-block3 #fca7ea;
+@define-color fg-block0 #2ac3de;
+@define-color fg-block1 #1abc9c;
+@define-color fg-block2 #db4b4b;
+@define-color fg-block3 #bb9af7;
