--- a/config/waybar/tokyonight.css
+++ b/config/waybar/tokyonight.css
@@ -8,8 +8,10 @@
 @define-color border0 #232533;
 @define-color border1 #424b6b;
 
-@define-color accent         #449dab;
-@define-color battery-low    #f7768e;
+@define-color accent  #449dab;
+@define-color red     #f7768e;
+
+@define-color battery-low    @red;
 @define-color battery-warn   #ff9e64;
 @define-color battery-charge #e0af68;
 
