--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,77 +1,77 @@
 @import "tokyonight.css";
 
 * {
-    border: none;
-    border-radius: 0;
-    min-height: 0;
+  font-family:
+    JetBrains Mono,
+    monospace,
+    Symbols Nerd Font;
+  font-size: 10pt;
 }
 
 window#waybar {
-    font-family: JetBrains Mono, Symbols Nerd Font;
-    background: @bg0;
-    border-bottom: 1px solid @border0;
-    color: @fg1;
-    font-size: 10pt;
+  background: @bg0;
+  border-bottom: 1px solid @border0;
+  color: @fg1;
 }
 
 #workspaces,
 #tags {
-    background-color: @bg1;
-    border: 1px solid @border0;
-    margin: 5px;
-    margin-right: 0;
-    border-radius: 6px;
+  background-color: @bg1;
+  border: 1px solid @border0;
+  margin: 5px;
+  margin-right: 0;
+  border-radius: 6px;
 }
 
 #workspaces button,
 #tags button {
-    color: @fg0;
-    background: transparent;
-    transition-property: none;
-    padding: 0 8px;
-    border-radius: 4px;
-    margin: 1px;
+  color: @fg0;
+  background: transparent;
+  transition-property: none;
+  padding: 0 8px;
+  border-radius: 4px;
+  margin: 1px;
 }
 
 #workspaces button:not(:last-child),
 #tags button:not(:last-child) {
-    margin-right: 3px;
+  margin-right: 3px;
 }
 
 #tags button.occupied {
-    color: @fg1;
+  color: @fg1;
 }
 
 #workspaces button:hover,
 #tags button:hover {
-    background-color: @bg2;
-    text-shadow: none;
-    box-shadow: none;
+  background-color: @bg2;
+  text-shadow: none;
+  box-shadow: none;
 }
 
 #workspaces button.urgent {
-    background-color: @red;
-    color: @bg0;
+  background-color: @red;
+  color: @bg0;
 }
 
 #workspaces button.active,
 #tags button.focused {
-    color: @workspace-active-fg;
-    background-color: @workspace-active-bg;
+  color: @workspace-active-fg;
+  background-color: @workspace-active-bg;
 }
 
 #workspaces button.active:hover,
 #tags button.focused:hover {
-    text-shadow: none;
+  text-shadow: none;
 }
 
 #workspaces button.active.special {
-    background: @special-workspace-bg;
-    color: @special-workspace-fg;
+  background: @special-workspace-bg;
+  color: @special-workspace-fg;
 }
 
 window#waybar.empty #window {
-    opacity: 0;
+  opacity: 0;
 }
 
 #privacy-item,
@@ -82,11 +82,11 @@ window#waybar.empty #window {
 #network,
 #clock,
 #window {
-    margin: 5px 0;
-    background-color: @bg1;
-    border: 1px solid @border0;
-    padding: 0 10px;
-    border-radius: 6px;
+  margin: 5px 0;
+  background-color: @bg1;
+  border: 1px solid @border0;
+  padding: 0 10px;
+  border-radius: 6px;
 }
 
 #pulseaudio,
@@ -94,46 +94,46 @@ window#waybar.empty #window {
 #battery,
 #network,
 #clock {
-    color: @accent;
+  color: @accent;
 }
 
 #pulseaudio:hover,
 #clock:hover,
 #network:hover,
 #power-profiles-daemon:hover {
-    background-color: @bg2;
-    border: 1px solid @border1;
+  background-color: @bg2;
+  border: 1px solid @border1;
 }
 
 #privacy-item {
-    color: @red;
+  color: @red;
 }
 
 #network.disconnected,
 #pulseaudio.muted {
-    color: @fg0;
+  color: @fg0;
 }
 
 #battery.charging {
-    color: @battery-charge;
+  color: @battery-charge;
 }
 
 #battery.charging.warning {
-    color: @battery-charge;
+  color: @battery-charge;
 }
 
 #battery.charging.critical {
-    color: @battery-charge;
+  color: @battery-charge;
 }
 
 #battery.warning {
-    color: @battery-warn;
+  color: @battery-warn;
 }
 
 #battery.critical {
-    color: @battery-low;
+  color: @battery-low;
 }
 
 #clock {
-    margin-right: 5px;
+  margin-right: 5px;
 }
